instance.tf
resource "aws_instance" "WordPress" {
  depends_on = [aws_internet_gateway.public_internet_gw]
  ami           = "ami-0742b4e673072066f"
  instance_type = "t2.micro"
  key_name = "Temporary"
  subnet_id = aws_subnet.public_subnet.id
  vpc_security_group_ids = [aws_security_group.SG_public_subnet.id] 
  tags = {
     Name = "WEB"
  } 

  user_data = <<EOF
		 #! /bin/bash
             sudo yum install httpd php php-mysql -y -q
             sudo cd /var/www/html
             echo "Welcome" > hi.html
             sudo wget https://wordpress.org/wordpress-5.1.1.tar.gz
             sudo tar -xzf wordpress-5.1.1.tar.gz
             sudo cp -r wordpress/* /var/www/html/
             sudo rm -rf wordpress
             sudo rm -rf wordpress-5.1.1.tar.gz
             sudo chmod -R 755 wp-content
             sudo chown -R apache:apache wp-content
             sudo wget https://s3.amazonaws.com/bucketforwordpresslab-donotdelete/htaccess.txt
             sudo mv htaccess.txt .htaccess
             sudo systemctl start httpd
             sudo systemctl enable httpd 
      EOF

#  provisioner "local-exec" {
#   command = "echo ${aws_instance.WordPress.public_ip} > publicIP.txt"
#  }
  

  # provisioner "remote-exec" {
  
  

  #   connection {
  #     type        = "ssh"
  #     user        = "ec2-user"
  #     host        = "${self.public_ip}"
  #     private_key = "id_rsa"
  #   }
  # }

  # provisioner "local-exec" {
  #   command = "sleep 300; ansible -u ec2-user -i ${self.public_ip} --private-key ${file("/home/nirmaljeet/.ssh/id_rsa")} -m ping" 
  # }
}


# Launching RDS db instance
resource "aws_db_instance" "DataBase" {
  allocated_storage    = 20
  max_allocated_storage = 100
  storage_type         = "gp2"
  engine               = "mysql"
  engine_version       = "5.7.22"
  instance_class       = "db.t2.micro"
  name                 = "mydb"
  username             = "nirmal"
  password             = "nirmal1234"
  parameter_group_name = "default.mysql5.7"
  publicly_accessible = false
  db_subnet_group_name = aws_db_subnet_group.db_subnet.name
  vpc_security_group_ids = [aws_security_group.SG_private_subnet_.id]
  skip_final_snapshot = true 

# provisioner "local-exec" {
#   command = "echo ${aws_db_instance.DataBase.endpoint} > DB_host.txt"
#     }

# }

 

}
